--- a/compose.yaml
+++ b/compose.yaml
@@ -20,6 +20,7 @@ services:
   # https://github.com/postgres/postgres
   postgres:
     image: postgres:17
+    restart: always
     ports:
       - 5432:5432
     environment:
@@ -27,7 +28,11 @@ services:
       POSTGRES_PASSWORD: hogehoge
       POSTGRES_DB: test_db
     healthcheck:
-      test: ['CMD-SHELL', 'pg_isready -U $${POSTGRES_USER} -d $${POSTGRES_DB} || exit 1']
+      test:
+        [
+          'CMD-SHELL',
+          'pg_isready -U $${POSTGRES_USER} -d $${POSTGRES_DB} || exit 1',
+        ]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -36,6 +41,7 @@ services:
   # https://github.com/sosedoff/pgweb
   pgweb:
     image: sosedoff/pgweb:0.16.2
+    restart: always
     ports:
       - 8081:8081
     environment:
@@ -48,6 +54,7 @@ services:
   # https://github.com/golang-migrate/migrate
   goapp-migrate-up:
     image: migrate/migrate:v4.18.3
+    restart: no
     command:
       - -database
       - 'postgresql://postgres:hogehoge@postgres:5432/test_db?sslmode=disable'
@@ -66,6 +73,7 @@ services:
   # https://github.com/golang-migrate/migrate
   goapp-migrate-down:
     image: migrate/migrate:v4.18.3
+    restart: no
     command:
       - -database
       - 'postgresql://postgres:hogehoge@postgres:5432/test_db?sslmode=disable'
@@ -84,6 +92,7 @@ services:
   # https://hub.docker.com/r/valkey/valkey
   valkey:
     image: valkey/valkey:8.1.1
+    restart: always
     ports:
       - 6379:6379
 
@@ -91,6 +100,7 @@ services:
   # https://github.com/RedisInsight/RedisInsight
   redisinsight:
     image: redis/redisinsight:2.68
+    restart: always
     ports:
       - 5540:5540
     environment:
@@ -106,6 +116,7 @@ services:
   # https://github.com/grafana/grafana
   grafana:
     image: grafana/grafana:12.0.1
+    restart: always
     ports:
       - '3000:3000'
     environment:
@@ -131,6 +142,7 @@ services:
   # https://github.com/grafana/mimir
   mimir:
     image: grafana/mimir:2.16.0
+    restart: always
     ports:
       - '9009:9009'
     command:
@@ -145,17 +157,21 @@ services:
   # https://github.com/prometheus/prometheus
   prometheus:
     image: prom/prometheus:v3.4.0
+    restart: always
     ports:
       - '9090:9090'
     volumes:
       - ${LOCAL_WORKSPACE_FOLDER:-.}/config/prometheus/prometheus.yaml:/etc/prometheus/prometheus.yml
     extra_hosts:
       - host.docker.internal:host-gateway
+    profiles:
+      - disabled
 
   # https://hub.docker.com/r/grafana/alloy
   # https://github.com/grafana/alloy
   alloy:
     image: grafana/alloy:v1.8.3
+    restart: always
     ports:
       - '12345:12345'
     command:
@@ -176,6 +192,7 @@ services:
   # https://github.com/grafana/tempo
   tempo:
     image: grafana/tempo:2.7.2
+    restart: always
     ports:
       - '3200:3200' # tempo http
       - '4317:4317' # otlp grpc
@@ -194,6 +211,7 @@ services:
   # https://github.com/grafana/pyroscope
   pyroscope:
     image: grafana/pyroscope:1.13.4
+    restart: always
     ports:
       - '4040:4040'
 
@@ -205,6 +223,7 @@ services:
   # https://github.com/grafana/loki
   loki:
     image: grafana/loki:3.5.1
+    restart: always
     ports:
       - '3100:3100'
       - '9096:9096'
@@ -217,6 +236,7 @@ services:
   # https://github.com/grafana/loki
   promtail:
     image: grafana/promtail:3.5.1
+    restart: always
     ports:
       - '9080:9080'
     command:
@@ -237,6 +257,7 @@ services:
   # https://opentelemetry.io/docs/languages/go/instrumentation/
   opentelemetry-collector:
     image: otel/opentelemetry-collector-contrib:0.126.0
+    restart: always
     ports:
       - '51888:1888' # pprof extension
       - '58888:8888' # Prometheus metrics exposed by the Collector
@@ -261,6 +282,7 @@ services:
   # https://github.com/Redocly/redocly-cli
   redocly-preview:
     image: redocly/cli:1.34.3
+    restart: always
     ports:
       - '18080:8080'
     command:
@@ -279,6 +301,7 @@ services:
   # https://github.com/grafana/k6
   k6:
     image: grafana/k6:1.0.0
+    restart: no
     working_dir: /k6
     command:
       - run
