--- a/.github/workflows/renovate-pr-check.yaml
+++ b/.github/workflows/renovate-pr-check.yaml
@@ -33,7 +33,7 @@ jobs:
         run: go fmt ./...
 
       - name: Check if Renovate PR builds successfully
-        run: go build ./...
+        run: go build -o /dev/null -buildvcs=false ./...
 
       - name: List all packages
         run: go list ./...
