--- a/.devcontainer/compose.yaml
+++ b/.devcontainer/compose.yaml
@@ -10,6 +10,10 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock:ro
     extra_hosts:
       - 'host.docker.internal:host-gateway'
+    cap_add:
+      - SYS_PTRACE
+    security_opt:
+      - seccomp:unconfined
 
   # override: disable main app on development
   goapp: null
