--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -24,6 +24,9 @@
     "opentelemetry-collector",
     "redocly-preview"
   ],
+  "features": {
+    "ghcr.io/devcontainers/features/docker-outside-of-docker:1": {}
+  },
   "customizations": {
     "vscode": {
       "extensions": [
@@ -35,11 +38,14 @@
         "saoudrizwan.claude-dev"
       ],
       "settings": {
+        "go.toolsManagement.checkForUpdates": "local",
+        "go.useLanguageServer": true,
+        "go.gopath": "/go",
         "terminal.integrated.defaultProfile.linux": "bash"
       }
     }
   },
-  "remoteUser": "root",
+  "remoteUser": "vscode",
   "remoteEnv": {
     "LOCAL_WORKSPACE_FOLDER": "${localWorkspaceFolder}",
     "GOAPP_CONFIG": "config/goapp/config.yaml",
