--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -38,10 +38,10 @@
         "saoudrizwan.claude-dev"
       ],
       "settings": {
+        "terminal.integrated.defaultProfile.linux": "bash",
         "go.toolsManagement.checkForUpdates": "local",
         "go.useLanguageServer": true,
-        "go.gopath": "/go",
-        "terminal.integrated.defaultProfile.linux": "bash"
+        "go.gopath": "/go"
       }
     }
   },
