--- a/.github/workflows/renovate-pr-check.yaml
+++ b/.github/workflows/renovate-pr-check.yaml
@@ -53,13 +53,13 @@ jobs:
         with:
           go-version: '1.24.x'
       - name: Run go mod tidy
-        run: scripts/go_mod_tidy_all.sh
+        run: scripts/go_mod_tidy.sh
       - name: Format all packages
-        run: scripts/go_fmt_all.sh
+        run: go fmt ./...
       - name: Check if Renovate PR builds successfully
-        run: scripts/go_build_all.sh
+        run: scripts/go_build_without_binary.sh
       - name: List all packages
-        run: scripts/go_list_all.sh
+        run: go list ./...
       - name: Commit and push changes if needed
         run: |
           if [[ -n "$(git status --porcelain)" ]]; then
