--- a/renovate.json
+++ b/renovate.json
@@ -159,6 +159,13 @@
   ],
   "packageRules": [
     {
+      "enabled": false,
+      "matchManagers": ["custom.regex"],
+      "matchDatasources": ["npm"],
+      "matchDepNames": ["renovate"],
+      "matchUpdateTypes": ["patch"]
+    },
+    {
       "matchFileNames": [".devcontainer/**"],
       "groupName": "devcontainer"
     },
